[package]
name = "vm-device"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = {version = ">=1.0.27", features = ["rc"] }
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
vfio-ioctls = { git = "https://github.com/wan-nyan-wan/vfio-ioctls", branch = "for-vhost-user-vsock" }
vm-memory = { version = "0.5.0", features = ["backend-mmap"] }
vmm-sys-util = ">=0.3.1"

